# smart-non-linear-controller

./: .gitattributes  .gitignore  README.md
base-simulation/matlab/: official-simulation-example.m  personal-simulation.m
base-simulation/python-sim/: README.md  pyproject.toml
base-simulation/python-sim/src/official-simulation/: official_simulation.py
base-simulation/python-sim/src/personal-simulation/: personal_simulation.py
