[project]
name = "thesis-base-simulation"
version = "0.1.0"
description = "Simple inverse pendulum simulations for thesis base work."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "gymnasium>=1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "src/personal-simulation",
    "src/official-simulation",
]

[tool.hatch.build.targets.sdist]
only-include = [
    "src/personal-simulation",
    "src/official-simulation",
]
